--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,59 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TunesTakeout</title>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
+  <title>ThePurge</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-
 </head>
 <body>
 
-  <main class="maincontainer">
-  <nav class="navbar navbar-default">
-    <div class="navbar-brand">Nosh Ditty</div>
-      <ul class="nav navbar-nav navbar-left">
-        <li class="<%= "active" if current_page == '/' %>"><%= link_to "Home", root_path %></li>
-
-        <% if current_user %>
-          <li class="search">
-          <%= form_tag(controller: "suggestions", action: "new_search", method: "post") do %>
-            <div class=class="navbar-form navbar-left">
-              <%= text_field_tag "query"%>
-            </div>
-          </li>
-            <li class="search">
-              <%= submit_tag"🔍", class: 'btn-btn-primary' %>
-            <% end %>
-            </li>
-        <%end%>
-        <!-- </form> -->
-      </ul>
-
-        <ul class="nav navbar-nav navbar-right">
-      <% if current_user %>
-        <li class="hi-user"><%=  "Hi #{ current_user.name }!" if current_user %> </li>
-        <li><%= image_tag "#{current_user.image_url}", class: "nav-pics" %></li>
-        <li><%= link_to "Profile", "        https://open.spotify.com/user/#{current_user.uid}" %></li>
-        <li class="<%= "active" if current_page == '/profile' %>"><%= link_to "Favorites", profile_path %></li>
-
-
-        <li><%= link_to "Sign Out", logout_path, method: :delete %></li>
-      <%end%>
-
-
-      <% unless current_user %>
-        <li class="hi-user"><%= "Guest"  %></li>
-        <!-- <li><%= image_tag "spotify.jpg", class: "nav-pics" %></li> -->
-        <li><%= link_to "Sign In", "auth/spotify" %></li>
-      <%end%>
-    </ul>
-  </nav>
-  <%= yield %>
-</main>
+<%= yield %>
 
 </body>
 </html>
